--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "firebase-admin": "^9.4.2"
+    "firebase-admin": "^9.4.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {},
   "scripts": {
