--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "@js-joda/core": "^3.2.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "firebase-admin": "^9.4.2",
+    "node-cron": "^2.0.3",
     "uuid": "^8.3.2"
   },
   "devDependencies": {},
